fixing nav alignment

--- a/wordpress/wp-content/themes/handmaids/style.css
+++ b/wordpress/wp-content/themes/handmaids/style.css
@@ -61,6 +61,7 @@ body {
 	list-style-type: none;
 	float: left;
 	margin: 0;
+	padding: 0;
 }
 
 #navmenu ul > li { /* horizontal list */
